[tool.poetry]
name = "template-of-async-scraper"
version = "0.1.0"
description = ""
authors = ["avkatlant <avkatlant@gmail.com>"]
readme = "README.md"
packages = [{include = "template_of_async_scraper"}]

[tool.poetry.dependencies]
python = "^3.10"
pytz = "^2022.7.1"
aiohttp = "^3.8.4"
httpx = "^0.23.3"
lxml = "^4.9.2"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
isort = "^5.12.0"
mypy = "^1.0.1"
flake8 = "^6.0.0"
pyright = "^1.1.296"
types-pytz = "^2022.7.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119

[tool.isort]
profile = "black"
line_length = 119

[tool.pyright]
typeCheckingMode = "basic"
